# pykinect2

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: body_game.py  infra_red.py  skeleton_log.py
pykinect2/: api.py  runtime.py
script/: cpp2py_enum.py
src/pykinect/: PyKinectRuntime.py  PyKinectV2.py  api.py  com.py  enumeration.py  guid.py  interface_backup.py  runtime.py  win32.py  wincom.py
tests/: PyKinectBodyGame.py  PyKinectInfraRed.py  body_game.py  explore_dll.py  infra_red.py
