[project]
name = "pykinect2"
version = "0.2.0"
description = "Wrapper to expose Kinect for Windows v2 API in Python"
authors = [
    { name = "Microsoft Corporation", email = "k4w@microsoft.com" },
    { name = "Meson Jiang", email = "jiang131072@gmail.com" },
]
dependencies = [
    "numpy>=2.1.0",
    "comtypes>=1.4.6",
    "pygame>=2.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

[project.urls]
Homepage = "https://github.com/jiang131072/pykinect2"
Repository = "https://github.com/jiang131072/pykinect2.git"
Issues = "https://github.com/jiang131072/pykinect2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
